<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <com.utkise.TTSProj2.header_view android:layout_width="fill_parent"
                                     android:layout_height="0dp"
                                     android:layout_weight="0.5"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp" android:layout_weight="1">
        <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/goback"
                android:id="@id/more0"
                android:layout_weight="1"
                android:background="@drawable/btn_yellow"
                style="@style/ButtonText_Black_20"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/more1"
                android:id="@id/more1"
                android:layout_weight="1"
                android:background="@drawable/btn_blue"
                style="@style/ButtonText"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp" android:layout_weight="1">
        <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/more2"
                android:id="@id/more2" android:layout_weight="1"
                android:background="@drawable/btn_blue"
                style="@style/ButtonText"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/more3"
                android:id="@id/more3" android:layout_weight="1"
                android:background="@drawable/btn_yellow"
                style="@style/ButtonText_Black_20"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp" android:layout_weight="1">
        <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/more4"
                android:id="@id/more4" android:layout_weight="1"
                android:background="@drawable/btn_yellow"
                style="@style/ButtonText_Black_20"/>
        <Button
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/more5"
                android:id="@id/more5" android:layout_weight="1"
                android:src="@drawable/picture11"
                android:drawableLeft="@drawable/picture53"
                android:background="@drawable/btn_blue"
                style="@style/ButtonText"
                />
    </LinearLayout>
</LinearLayout>