<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp" android:layout_weight="1" android:layout_gravity="center_horizontal"
            android:background="#ffffff">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/header"
                android:id="@+id/textView"
                android:gravity="center" android:textColor="#000000"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0dp"
                  android:layout_weight="0.02" android:layout_gravity="center_horizontal" android:background="#000000"
                  android:id="@+id/linearLayout"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp" android:layout_weight="1" android:layout_gravity="center_horizontal"
            android:background="#ffffff">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:gravity="center"
                android:text="@string/selectText"
                android:id="@id/select" android:textColor="#0d00ff"/>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp" android:layout_weight="0.02" android:layout_gravity="center_horizontal"
            android:background="#000000">
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="0dp" android:layout_weight="5" android:background="#ffffff">
        <TableLayout
                android:layout_width="0dp"
                android:layout_height="match_parent" android:layout_weight="1">
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                <Button
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:text="@string/empty"
                        android:id="@+id/aging" android:layout_column="0" android:layout_weight="1"
                        android:background="@drawable/aging"/>
                <Button
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:text="@string/empty"
                        android:id="@+id/hearing" android:layout_column="1" android:layout_weight="1"
                        android:background="@drawable/hearing"/>
            </TableRow>
            <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">
                <Button
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:text="@string/empty"
                        android:id="@+id/speech" android:layout_column="0" android:layout_weight="1"
                        android:background="@drawable/speech"/>
                <Button
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:text="@string/empty"
                        android:id="@+id/vision" android:layout_weight="1" android:background="@drawable/vision"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0dp"
                  android:layout_weight="0.02" android:layout_gravity="center_horizontal" android:background="#000000"
                  android:id="@+id/linearLayout2"/>

    <include layout="@layout/foot_banner" />



</LinearLayout>

